# rlsd

./: .gitignore  Cargo.toml  README.md  build-linux.ab  build-linux.sh
install-scripts/linux/: rlsd.service  setup.ab  setup.sh  update.ab  update.sh
migrations/: 0001_database_init.sql
services/linux/: rlsd-client.service  rlsd-server.service
src/: app.rs  constants.rs  data_receiver.rs  data_sender.rs  json_handler.rs  lib.rs  macros.rs  main.rs  stats.rs  tui.rs
src/config/: client.rs  server.rs
src/socket_handling/: client.rs  command_type.rs  data_receiver.rs  data_sender.rs  server.rs
src/stats_handling/: conversions.rs  database.rs  device_info.rs  stats_getter.rs  stats_loop.rs
