[package]
name = "rlsd"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
directories = "6.0.0"
once_cell = "1.21.3"
rand = "0.9.2"
ratatui = "0.29.0"
serde_json = "1.0.140"
systemstat = "0.2.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = {version="1.47.0", features=["full"]}
sysinfo = "0.36.0"
uuid = {version = "1.17.0", features=["v4"]}
strum = {version = "0.27.2", features=["derive"]}
chrono = "0.4.41"

[package.metadata.appimage]
auto_link = true